--- a/index.html
+++ b/index.html
@@ -1,269 +1,190 @@
 <!DOCTYPE html>
 <html lang="vi">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Map hóa đơn điện → Mẫu Excel</title>
+  <meta charset="UTF-8">
+  <title>Hỗ trợ đọc hóa đơn điện</title>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.14.305/pdf.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
   <style>
-    body{font-family:system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial,sans-serif;max-width:1100px;margin:20px auto;padding:0 16px}
-    header{margin-bottom:16px}
-    h1{font-size:22px;margin:0 0 8px}
-    .card{border:1px solid #e5e7eb;border-radius:16px;padding:16px;box-shadow:0 1px 4px rgba(0,0,0,0.04);margin-bottom:16px}
-    .grid{display:grid;grid-template-columns:1fr 1fr;gap:16px}
-    label{font-weight:600;display:block;margin-bottom:6px}
-    input[type=file]{display:block}
-    .row{display:grid;grid-template-columns:220px 1fr;gap:12px;align-items:center;margin:6px 0}
-    .btn{display:inline-block;padding:10px 14px;border-radius:12px;border:1px solid #111;background:#111;color:#fff;cursor:pointer}
-    .btn.secondary{background:#fff;color:#111}
-    .muted{color:#6b7280}.small{font-size:12px}.mono{font-family:ui-monospace,Menlo,Consolas,monospace}
-    pre{background:#f9fafb;border:1px solid #e5e7eb;border-radius:10px;padding:10px;white-space:pre-wrap}
+    body { font-family: Arial, sans-serif; margin: 20px; }
+    .container { max-width: 900px; margin: auto; }
+    textarea { width: 100%; height: 200px; }
+    input, button { margin: 5px 0; padding: 6px; }
+    .result { white-space: pre-wrap; background: #f8f8f8; padding: 10px; border: 1px solid #ccc; }
   </style>
-  <!-- PDF.js -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.16.105/pdf.min.js"></script>
-  <script>pdfjsLib.GlobalWorkerOptions.workerSrc='https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.16.105/pdf.worker.min.js';</script>
-  <!-- SheetJS -->
-  <script src="https://cdn.jsdelivr.net/npm/xlsx@0.18.5/dist/xlsx.full.min.js"></script>
 </head>
 <body>
-<header>
-  <h1>Nhập liệu hóa đơn điện → Excel (client-side)</h1>
-  <div class="muted small">Tải hóa đơn PDF EVN và file mẫu <span class="mono">Mau_TH.xlsx</span>, hệ thống sẽ thêm 1 dòng vào sheet <span class="mono">import</span>.</div>
-</header>
+<div class="container">
+  <h2>📄 Ứng dụng đọc hóa đơn điện → điền vào Excel</h2>
 
-<section class="card">
-  <div class="grid">
-    <div>
-      <label>1) Hóa đơn PDF</label>
-      <input id="pdfFile" type="file" accept="application/pdf" />
-    </div>
-    <div>
-      <label>2) File mẫu Excel</label>
-      <input id="xlsxFile" type="file" accept=".xlsx,.xls" />
-    </div>
-  </div>
-  <div class="row">
-    <div class="muted">Tùy chọn:</div>
-    <div>
-      <label class="muted">Mã tỉnh</label><input id="maTinh" value="YBI" />
-      <label class="muted">Kỳ</label><input id="ky" value="1" />
-    </div>
-  </div>
-  <div class="row">
-    <div></div>
-    <button class="btn" id="btnProcess">Đọc hóa đơn → Điền vào Excel</button>
-    <button class="btn secondary" id="btnReset">Làm lại</button>
-  </div>
-</section>
+  <label>Chọn file PDF hóa đơn:</label>
+  <input type="file" id="pdfFile" accept="application/pdf">
 
-<section class="card">
-  <h2 style="font-size:18px;margin-top:0">Kết quả / Header sheet</h2>
-  <pre id="results" class="small mono muted">Chưa có dữ liệu…</pre>
-</section>
+  <label>Chọn file Excel mẫu:</label>
+  <input type="file" id="excelFile" accept=".xlsx">
 
-<section class="card">
-  <h2 style="font-size:18px;margin-top:0">Tải file Excel đã điền</h2>
-  <div class="small muted">Giữ nguyên tiêu đề sheet <span class="mono">import</span>, chỉ <b>append</b> 1 dòng đúng thứ tự cột.</div>
-  <div class="row">
-    <div></div>
-    <button class="btn" id="btnDownload" disabled>Tải Excel đã điền</button>
-  </div>
-</section>
+  <label>Mã tỉnh:</label>
+  <input type="text" id="maTinh" value="YBI">
+
+  <label>Kỳ:</label>
+  <input type="number" id="ky" value="1">
+
+  <button onclick="processFiles()">Đọc hóa đơn → Điền vào Excel</button>
+
+  <h3>Kết quả trích xuất</h3>
+  <div id="output" class="result"></div>
+
+  <h3>Tải file Excel đã điền</h3>
+  <button id="downloadExcel" style="display:none;">Tải Excel đã điền</button>
+</div>
 
 <script>
-const el = id => document.getElementById(id);
-const results = el('results');
-
-const onlyDigits = s => (s||'').replace(/[^\d]/g,'');
-const vnNumToInt = s => { const d = onlyDigits(s); return d?parseInt(d,10):null; };
-
-function stripDiacritics(s){ return s.normalize('NFD').replace(/[\u0300-\u036f]/g,''); }
-const norm = s => stripDiacritics(String(s==null?'':s))
-  .replace(/\r?\n/g,' ')
-  .replace(/\s+/g,' ')
-  .trim()
-  .toLowerCase();
-
-function show(o){ results.textContent = (typeof o==='string')?o:JSON.stringify(o,null,2); }
-
-// ---- PDF ----
-async function readPdfText(file){
-  const uint8 = new Uint8Array(await file.arrayBuffer());
-  const pdf = await pdfjsLib.getDocument({data:uint8}).promise;
-  let all = '';
-  for(let i=1;i<=pdf.numPages;i++){
-    const page = await pdf.getPage(i);
+async function pdfToText(file) {
+  const arrayBuffer = await file.arrayBuffer();
+  const pdf = await pdfjsLib.getDocument({ data: arrayBuffer }).promise;
+  let textContent = '';
+  for (let pageNum = 1; pageNum <= pdf.numPages; pageNum++) {
+    const page = await pdf.getPage(pageNum);
     const content = await page.getTextContent();
-    all += content.items.map(it=>it.str).join('\n')+'\n';
+    const strings = content.items.map(item => item.str);
+    textContent += strings.join(' ') + '\n';
   }
-  return all;
+  return textContent;
 }
 
-// ---- Robust extract: chịu xuống dòng/khoảng trắng, cả dấu : và ： ----
+// --- Hàm trích xuất mới ---
 function extractInvoiceFields(text){
-  const out = {};
-  const grab = (re) => { const m = text.match(re); return m ? m[1].replace(/\s+/g,' ').trim() : null; };
-  const num = (s) => s ? parseInt(s.replace(/[^\d]/g,''),10) : null;
+  const stripDiacritics = s => s.normalize('NFD').replace(/[\u0300-\u036f]/g,'');
+  const norm = s => stripDiacritics(String(s||''))
+    .replace(/\r?\n/g,' ')
+    .replace(/\s+/g,' ')
+    .toLowerCase();
+  const N = norm(text);
+  const numVN = s => s ? parseInt(s.replace(/[^\d]/g,''),10) : null;
 
-  // Số hóa đơn
-  out.invoiceNo    = grab(/Số\s*\(No\)\s*[:：]\s*([0-9]+)/i);
-
-  // Mã khách hàng
-  out.customerCode = grab(/Mã\s*khách\s*hàng[\s\S]{0,60}?[:：]\s*([A-Z0-9]+)/i);
-
-  // Kỳ tính
-  const mPer = text.match(/từ\s*ngày\s*([0-9]{2}\/[0-9]{2}\/[0-9]{4})[\s\S]{0,80}?đến\s*ngày\s*([0-9]{2}\/[0-9]{2}\/[0-9]{4})/i);
-  if (mPer){
-    out.periodStart = mPer[1];
-    out.periodEnd   = mPer[2];
-    out.monthCode   = parseInt(out.periodEnd.slice(6,10)+out.periodEnd.slice(3,5),10); // yyyyMM
+  function findNear(keywords, pattern, span=180){
+    const keys = keywords.map(k=>norm(k));
+    let pos = -1;
+    for(const k of keys){ pos = N.indexOf(k); if(pos>=0) break; }
+    if(pos < 0) return null;
+    const chunk = N.slice(pos, Math.min(N.length, pos + span));
+    const m = chunk.match(pattern);
+    return m ? m[1] : null;
   }
 
-  // kWh
-  let mk = text.match(/kWh\s*([0-9\.,]+)/i) || text.match(/([0-9\.,]+)\s*kWh/i);
-  out.kwh = mk ? num(mk[1]) : null;
+  const out = {};
 
-  // Các khoản tiền
-  out.amountBefore = num(grab(/Cộng\s*tiền\s*hàng[\s\S]{0,60}?[:：]\s*([0-9\.,]+)/i));
-  out.vatAmount    = num(grab(/Tiền\s*thuế\s*GTGT[\s\S]{0,60}?[:：]\s*([0-9\.,]+)/i));
-  out.totalAmount  = num(grab(/Tổng\s*cộng\s*tiền\s*thanh\s*toán[\s\S]{0,60}?[:：]\s*([0-9\.,]+)/i));
+  let m = text.match(/Số\s*\(No\)\s*[:：]\s*([0-9]+)/i);
+  out.invoiceNo = m ? m[1] : null;
+
+  const cust = findNear(
+    ['Mã khách hàng','Ma khach hang','Customer\'s Code','Customer Code'],
+    /([a-z0-9]{6,})/i
+  );
+  out.customerCode = cust ? cust.toUpperCase() : null;
+
+  m = N.match(/tu ngay\s*([0-9]{2}\/[0-9]{2}\/[0-9]{4}).{0,80}?den ngay\s*([0-9]{2}\/[0-9]{2}\/[0-9]{4})/i);
+  if(m){
+    out.periodStart = m[1];
+    out.periodEnd   = m[2];
+    out.monthCode   = out.periodEnd ? out.periodEnd.slice(6,10)+out.periodEnd.slice(3,5) : null;
+  }
+
+  let kw = findNear(['kWh','kwh'], /([0-9\.,]+)/i);
+  if(!kw){
+    m = text.match(/kWh\s*([0-9\.,]+)/i) || text.match(/([0-9\.,]+)\s*kWh/i);
+    kw = m ? m[1] : null;
+  }
+  out.kwh = numVN(kw);
+
+  const amountBefore = findNear(
+    ['Cộng tiền hàng','Cong tien hang','Total amount'],
+    /([0-9][0-9\.,]{3,})/
+  );
+  out.amountBefore = numVN(amountBefore);
+
+  const vat = findNear(
+    ['Tiền thuế GTGT','Tien thue GTGT','VAT amount'],
+    /([0-9][0-9\.,]{3,})/
+  );
+  out.vatAmount = numVN(vat);
+
+  const total = findNear(
+    ['Tổng cộng tiền thanh toán','Tong cong tien thanh toan','Total payment'],
+    /([0-9][0-9\.,]{3,})/
+  );
+  out.totalAmount = numVN(total);
 
   return out;
 }
 
-// ---- Map header (fuzzy, bỏ dấu, chấp nhận alias) ----
-function findIndexByAliases(header, aliases){
-  const nh = header.map(h=>norm(h));
-  const al = aliases.map(a=>norm(a));
-  // exact
-  for(let i=0;i<nh.length;i++) for(const a of al) if(nh[i]===a) return i;
-  // header contains alias
-  for(let i=0;i<nh.length;i++) for(const a of al) if(nh[i].includes(a)) return i;
-  // alias contains header
-  for(let i=0;i<nh.length;i++) for(const a of al) if(a.includes(nh[i])) return i;
-  return -1;
-}
+let excelData = null;
 
-function buildColMap(header){
-  const H = header, map = {};
-  map.ma_tinh   = findIndexByAliases(H, ['Mã tỉnh','Ma tinh']);
-  map.ma_thang  = findIndexByAliases(H, ['Mã tháng (yyyyMM)','Ma thang (yyyyMM)','Mã tháng']);
-  map.ky        = findIndexByAliases(H, ['Kỳ','Ky']);
-  map.ma_csht   = findIndexByAliases(H, ['Mã CSHT','Ma CSHT']);
-  map.ma_evn    = findIndexByAliases(H, ['Mã EVN','Ma EVN','Mã khách hàng','Ma khach hang']);
+async function processFiles(){
+  const pdfFile = document.getElementById('pdfFile').files[0];
+  const excelFile = document.getElementById('excelFile').files[0];
+  const maTinh = document.getElementById('maTinh').value.trim();
+  const ky = parseInt(document.getElementById('ky').value,10);
 
-  map.ngay_dau  = findIndexByAliases(H, [
-    'Ngày đầu kỳ (dd/MM/yyyy)\n(Bắt buộc định dạng text)',
-    'Ngày đầu kỳ (dd/MM/yyyy) (Bắt buộc định dạng text)',
-    'Ngày đầu kỳ (dd/MM/yyyy)(Bắt buộc định dạng text)',
-    'Ngày đầu kỳ'
-  ]);
-  map.ngay_cuoi = findIndexByAliases(H, [
-    'Ngày cuối kỳ (dd/MM/yyyy)\n(Bắt buộc định dạng text)',
-    'Ngày cuối kỳ (dd/MM/yyyy) (Bắt buộc định dạng text)',
-    'Ngày cuối kỳ (dd/MM/yyyy)(Bắt buộc định dạng text)',
-    'Ngày cuối kỳ'
-  ]);
-
-  map.tong_chi_so     = findIndexByAliases(H, ['Tổng chỉ số','Tong chi so']);
-  map.so_tien         = findIndexByAliases(H, ['Số tiền','So tien']);
-  map.thue_vat        = findIndexByAliases(H, ['Thuế VAT','Thue VAT']);
-  map.so_hoa_don      = findIndexByAliases(H, ['Số hóa đơn','So hoa don']);
-  map.so_tien_du_kien = findIndexByAliases(H, ['Số tiền dự kiến','So tien du kien','Số tiền dự']);
-  map.ghi_chu         = findIndexByAliases(H, ['Ghi chú','Ghi chu']);
-  return map;
-}
-
-function buildRow(header, colMap, data){
-  const row = new Array(header.length).fill('');
-  const set = (k,v)=>{ const i = colMap[k]; if(i>=0) row[i] = (v==null?'':v); };
-
-  set('ma_tinh', data.maTinh);
-  set('ma_thang', data.monthCode);
-  set('ky', data.ky);
-  set('ma_csht', data.csht);
-  set('ma_evn', data.customerCode);
-  set('ngay_dau', data.periodStart);
-  set('ngay_cuoi', data.periodEnd);
-  set('tong_chi_so', data.kwh);
-  set('so_tien', data.amountBefore);
-  set('thue_vat', data.vatAmount);
-  set('so_hoa_don', data.invoiceNo);
-  set('so_tien_du_kien', data.totalAmount);
-  set('ghi_chu', 'Map dự kiến từ hóa đơn điện tử');
-
-  return row;
-}
-
-let filledWb = null;
-
-el('btnProcess').addEventListener('click', async () => {
-  try{
-    const pdfFile = el('pdfFile').files[0];
-    const xlsxFile = el('xlsxFile').files[0];
-    if(!pdfFile || !xlsxFile){ alert('Vui lòng chọn cả hóa đơn PDF và file mẫu Excel.'); return; }
-
-    // 1) Trích xuất PDF
-    show('Đang đọc PDF…');
-    const text = await readPdfText(pdfFile);
-    const ext = extractInvoiceFields(text);
-
-    // 2) CSHT: lấy đúng 3 phần đầu tên file (CSHT_YBI_00014_07-2025.pdf -> CSHT_YBI_00014)
-    const base = pdfFile.name.replace(/\.[^.]+$/,'');
-    const parts = base.split('_');
-    ext.csht = (parts.length>=3) ? parts.slice(0,3).join('_') : base;
-
-    // 3) Tham số form
-    ext.maTinh = el('maTinh').value || 'YBI';
-    ext.ky     = parseInt(el('ky').value||'1',10);
-
-    // 4) Đọc Excel template & header
-    const buf = await xlsxFile.arrayBuffer();
-    const wb = XLSX.read(buf, {type:'array'});
-    const wsName = 'import';
-    const ws = wb.Sheets[wsName];
-    if(!ws) throw new Error(`Không tìm thấy sheet "${wsName}"`);
-
-    const aoa = XLSX.utils.sheet_to_json(ws, {header:1, blankrows:false});
-    if(aoa.length===0) throw new Error('Sheet trống, không có header.');
-    const header = aoa[0];
-
-    // Log nhanh để kiểm tra
-    show({extracted: ext, header});
-
-    // 5) Map cột & tạo dòng mới
-    const colMap = buildColMap(header);
-    const newRow = buildRow(header, colMap, {
-      maTinh: ext.maTinh, monthCode: ext.monthCode, ky: ext.ky, csht: ext.csht,
-      customerCode: ext.customerCode, periodStart: ext.periodStart, periodEnd: ext.periodEnd,
-      kwh: ext.kwh, amountBefore: ext.amountBefore, vatAmount: ext.vatAmount,
-      invoiceNo: ext.invoiceNo, totalAmount: ext.totalAmount
-    });
-
-    // 6) Append dòng (không động vào header/cột)
-    XLSX.utils.sheet_add_aoa(ws, [newRow], {origin: -1});
-    filledWb = wb;
-    el('btnDownload').disabled = false;
-    results.textContent += '\n\n✅ Đã thêm 1 dòng vào sheet import.';
-  }catch(err){
-    console.error(err);
-    results.textContent = 'Lỗi: '+err.message;
+  if(!pdfFile || !excelFile){
+    alert("Vui lòng chọn đủ file PDF và Excel mẫu!");
+    return;
   }
-});
 
-el('btnDownload').addEventListener('click', ()=>{
-  if(!filledWb) return;
-  const wbout = XLSX.write(filledWb, {bookType:'xlsx', type:'array'});
-  const blob = new Blob([wbout], {type:'application/vnd.openxmlformats-officedocument.spreadsheetml.sheet'});
+  const text = await pdfToText(pdfFile);
+  const fields = extractInvoiceFields(text);
+
+  fields.maTinh = maTinh;
+  fields.ky = ky;
+
+  document.getElementById('output').textContent = JSON.stringify(fields, null, 2);
+
+  const wb = await readExcelFile(excelFile);
+  const ws = wb.Sheets[wb.SheetNames[0]];
+
+  const lastRow = XLSX.utils.sheet_to_json(ws).length + 2;
+
+  ws['A'+lastRow] = { v: fields.maTinh };
+  ws['B'+lastRow] = { v: fields.monthCode };
+  ws['C'+lastRow] = { v: fields.ky };
+  ws['D'+lastRow] = { v: fields.csht || '' };
+  ws['E'+lastRow] = { v: fields.customerCode || '' };
+  ws['F'+lastRow] = { v: fields.periodStart || '' };
+  ws['G'+lastRow] = { v: fields.periodEnd || '' };
+  ws['H'+lastRow] = { v: fields.kwh || '' };
+  ws['I'+lastRow] = { v: fields.amountBefore || '' };
+  ws['J'+lastRow] = { v: fields.vatAmount || '' };
+  ws['K'+lastRow] = { v: fields.invoiceNo || '' };
+  ws['L'+lastRow] = { v: fields.totalAmount || '' };
+  ws['M'+lastRow] = { v: 0 };
+
+  excelData = wb;
+  document.getElementById('downloadExcel').style.display = 'inline-block';
+}
+
+function readExcelFile(file){
+  return new Promise((resolve, reject)=>{
+    const reader = new FileReader();
+    reader.onload = e=>{
+      const data = new Uint8Array(e.target.result);
+      const wb = XLSX.read(data, { type: 'array' });
+      resolve(wb);
+    };
+    reader.onerror = reject;
+    reader.readAsArrayBuffer(file);
+  });
+}
+
+document.getElementById('downloadExcel').addEventListener('click', ()=>{
+  if(!excelData) return;
+  const wbout = XLSX.write(excelData, { bookType: 'xlsx', type: 'array' });
+  const blob = new Blob([wbout], { type: 'application/octet-stream' });
+  const url = URL.createObjectURL(blob);
   const a = document.createElement('a');
-  a.href = URL.createObjectURL(blob);
-  a.download = `Mau_TH_filled_${Date.now()}.xlsx`;
+  a.href = url;
+  a.download = 'Mau_TH_filled.xlsx';
   a.click();
-  URL.revokeObjectURL(a.href);
-});
-
-el('btnReset').addEventListener('click', ()=>{
-  filledWb = null; results.textContent = 'Chưa có dữ liệu…';
-  el('btnDownload').disabled = true; el('pdfFile').value=''; el('xlsxFile').value='';
+  URL.revokeObjectURL(url);
 });
 </script>
 </body>
